# cxx-cmake-template

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.cpp
cmake/: ccache.cmake  coverage-cleanup.cmake  coverage.cmake  doxygen.cmake  module.cmake  target.cmake  version.cmake
test/: CMakeLists.txt  unittest_sum.cpp
